<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <organization>
        <name>Gemini 8m Observatories, Software Group</name>
        <url>http://www.gemini.edu/</url>
    </organization>

    <!--
     | put license details here
    <licenses>
      <license>
        <name>...</name>
        <url>http://...</url>
        <comments>
        </comments>
      </license>
    </licenses>
    -->

    <modelVersion>4.0.0</modelVersion>
    <groupId>edu.gemini.aspen</groupId>
    <artifactId>giapi-osgi</artifactId>
    <version>1.2.0-SNAPSHOT</version>

    <name>giapi-osgi</name>

    <description>GIAPI - OSGi</description>

    <properties>
        <!--
         | some example OSGi runtime properties
        -->
        <org.osgi.service.http.port>8080</org.osgi.service.http.port>
        <org.osgi.service.http.port.secure>8443</org.osgi.service.http.port.secure>
        <!-- Component versions -->
        <clover.version>3.1.0</clover.version>
        <org.activemq.core.version>5.5.0</org.activemq.core.version>
        <pax-exam.version>1.2.3</pax-exam.version>
        <pax-web.version>1.0.7</pax-web.version>
        <org.apache.felix.ipojo>1.8.0</org.apache.felix.ipojo>
        <scala-lang.version>2.9.1</scala-lang.version>
        <vaadin.version>6.7.0</vaadin.version>
        <!-- Global encoding -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <packaging>pom</packaging>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.atlassian.maven.plugins</groupId>
                <artifactId>maven-clover2-plugin</artifactId>
                <version>${clover.version}</version>
                <configuration>
                    <licenseLocation>${user.home}/.clover/clover.license</licenseLocation>
                    <!--<targetPercentage>30%</targetPercentage>
                    <methodContexts>
                        <main>(.* )?public static void main\(String\[\] argv\).*</main>
                    </methodContexts>
                    <contextFilters>main</contextFilters>-->
                    <historyThreshold>0.5%</historyThreshold>
                    <generateHistorical>true</generateHistorical>
                    <historyDir>${project.build.directory}/../history</historyDir>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.ops4j</groupId>
                <artifactId>maven-pax-plugin</artifactId>
                <version>1.4</version>
                <configuration>
                    <provision>
                        <param>--platform=felix</param>
                    </provision>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>2.7.1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.10</version>
                <configuration>
                    <argLine>-Xverify:none</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencyManagement>
        <dependencies>
            <!-- Internal modules -->
            <dependency>
                <groupId>edu.gemini.aspen.gmp</groupId>
                <artifactId>gmp-top</artifactId>
                <version>0.0.2</version>
            </dependency>
            <dependency>
                <groupId>edu.gemini.aspen</groupId>
                <artifactId>epics-heartbeat</artifactId>
                <version>0.2.0-SNAPSHOT</version>
            </dependency>

            <!-- JAXB -->
            <dependency>
                <groupId>javax.xml.bind</groupId>
                <artifactId>jaxb-api</artifactId>
                <version>2.1</version>
            </dependency>

            <dependency>
                <groupId>edu.gemini.external.osgi.net.jmatrix.eproperties</groupId>
                <artifactId>eproperties</artifactId>
                <version>1.1.3</version>
            </dependency>
            <dependency>
                <groupId>javax.jms</groupId>
                <artifactId>com.springsource.javax.jms</artifactId>
                <version>1.1.0</version>
            </dependency>

            <!-- ActiveMQ -->
            <dependency>
                <groupId>org.apache.activemq</groupId>
                <artifactId>activemq-core</artifactId>
                <version>${org.activemq.core.version}</version>
                <scope>runtime</scope>
                <exclusions>
                    <exclusion>
                        <artifactId>commons-logging</artifactId>
                        <groupId>commons-logging</groupId>
                    </exclusion>
                    <exclusion>
                        <artifactId>org.slf4j</artifactId>
                        <groupId>slf4j-api</groupId>
                    </exclusion>
                    <exclusion>
                        <groupId>org.springframework</groupId>
                        <artifactId>spring-context</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>org.apache.activemq.protobuf</groupId>
                        <artifactId>activemq-protobuf</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>org.jasypt</groupId>
                        <artifactId>jasypt</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>org.apache.activemq</groupId>
                        <artifactId>activeio-core</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>org.apache.activemq</groupId>
                <artifactId>kahadb</artifactId>
                <version>${org.activemq.core.version}</version>
                <scope>runtime</scope>
            </dependency>
            <dependency>
                <groupId>org.apache.geronimo.specs</groupId>
                <artifactId>geronimo-j2ee-management_1.1_spec</artifactId>
                <version>1.0.1</version>
                <scope>runtime</scope>
            </dependency>
            <dependency>
                <groupId>org.apache.geronimo.specs</groupId>
                <artifactId>geronimo-annotation_1.0_spec</artifactId>
                <version>1.1.1</version>
                <scope>runtime</scope>
            </dependency>

            <!-- IPojo dependencies -->
            <dependency>
                <groupId>org.apache.felix</groupId>
                <artifactId>org.apache.felix.ipojo.annotations</artifactId>
                <version>${org.apache.felix.ipojo}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.felix</groupId>
                <artifactId>org.apache.felix.ipojo</artifactId>
                <version>${org.apache.felix.ipojo}</version>
            </dependency>

            <!-- SPModel -->
            <dependency>
                <groupId>gemini-nocs</groupId>
                <artifactId>spModel-type</artifactId>
                <version>1.0.0</version>
                <scope>test</scope>
            </dependency>

            <!-- XML RPC -->
            <dependency>
                <groupId>edu.gemini.external.osgi.org.apache.xmlrpc</groupId>
                <artifactId>xmlrpc-server</artifactId>
                <version>3.1.3</version>
            </dependency>

            <!-- PAX-WEB -->
            <dependency>
                <groupId>org.ops4j.pax.web</groupId>
                <artifactId>pax-web-jetty-bundle</artifactId>
                <version>${pax-web.version}</version>
            </dependency>

            <!-- Vaadin components -->
            <dependency>
                <groupId>com.vaadin</groupId>
                <artifactId>vaadin</artifactId>
                <version>${vaadin.version}</version>
            </dependency>
            <dependency>
                <groupId>edu.gemini.external.osgi.org.vaadin.addons</groupId>
                <artifactId>pagedtable</artifactId>
                <version>0.6.2</version>
            </dependency>
            <dependency>
                <groupId>edu.gemini.external.osgi.org.vaadin.addons</groupId>
                <artifactId>confirmdialog</artifactId>
                <version>1.1.0</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <modules>
        <module>poms</module>
        <module>provision</module>
        <module>epics-api</module>
        <module>epics-service</module>
        <module>giapi</module>
        <module>giapi-fileevent-handler</module>
        <module>jms-api</module>
        <module>giapi-test-support</module>
        <module>giapi-obsevents</module>
        <module>giapi-jms-util</module>
        <module>giapi-status-service</module>
        <module>giapi-status-dispatcher</module>
        <module>giapi-fileevents</module>
        <module>jms-activemq-broker</module>
        <module>jms-activemq-provider</module>
        <module>gmp-tcs-context</module>
        <module>gmp-logging</module>
        <module>gmp-commands</module>
        <module>gmp-commands-jms-bridge</module>
        <module>gmp-commands-jms-client</module>
        <module>gmp-commands-records</module>
        <module>gmp-services</module>
        <module>gmp-pcs-updater</module>
        <module>gmp-status-gateway</module>
        <module>gmp-statusdb</module>
        <module>cas</module>
        <module>casdb</module>
        <module>gmp-epics-access</module>
        <module>gmp-epics-simulator</module>
        <module>gmp-status-simulator</module>
        <module>gmp-epics-status-service</module>
        <module>gpi-bean</module>
        <module>gmp-heartbeat</module>
        <module>gmp-heartbeat-distributor-service</module>
        <module>giapi-tester</module>
        <module>gmp-webconsole-branding</module>
        <module>gmp-webconsole-docs</module>
        <module>epics-heartbeat</module>
        <module>gmp-tui</module>
        <module>gmp-top</module>
        <module>gmp-epics-to-status</module>
        <module>gds-api</module>
        <module>gds-config-validator</module>
        <module>gds-performance-monitoring</module>
        <module>gds-keywords-database</module>
        <module>gds-actors-composer</module>
        <module>gds-epics-actors</module>
        <module>gds-instrument-status-actors</module>
        <module>gds-odb-actors</module>
        <module>gds-constant-actors</module>
        <module>gds-obsevent-handler</module>
        <module>gds-fits-updater</module>
        <module>gds-datalabel-provider</module>
        <module>gds-static-header-receiver</module>
        <module>gds-seqexec-actors</module>
        <module>gds-error-policy</module>
        <module>gds-health</module>
        <module>gds-observation-state-publisher</module>
        <module>gds-fits-checker</module>
        <module>giapi-vaadin-common</module>
        <module>gds-web-ui</module>
        <module>gds-web-ui-keywords</module>
        <module>gds-web-ui-configuration</module>
        <module>gds-web-ui-status</module>
        <module>gds-web-ui-logs</module>
        <module>gmp-web-ui-properties</module>
        <!--module>gpi-ao-plot</module>
        <module>gmp-web-ui-console</module-->
        <module>gmp-server</module>
        <module>integration-tests</module>
    </modules>

    <distributionManagement>
        <!-- releases repo -->
        <repository>
            <id>edu.gemini.releases</id>
            <name>sbfosxdev01.cl.gemini.edu-releases</name>
            <url>http://build.cl.gemini.edu:8081/artifactory/libs-releases-local</url>
        </repository>
        <snapshotRepository>
            <id>edu.gemini.releases</id>
            <name>sbfosxdev01.cl.gemini.edu-snapshots</name>
            <url>http://build.cl.gemini.edu:8081/artifactory/libs-releases-local</url>
        </snapshotRepository>
    </distributionManagement>

    <repositories>
        <repository>
            <!-- Maven central mirror -->
            <id>edu.gemini.mirror</id>
            <url>http://build.cl.gemini.edu:8081/artifactory/repo1</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <!-- Repository of other local dependencies stored locally -->
            <id>edu.gemini.ext-releases-local</id>
            <url>http://build.cl.gemini.edu:8081/artifactory/ext-releases-local</url>
        </repository>
        <repository>
            <!-- Repository of other local dependencies stored locally -->
            <id>edu.gemini.libs-releases-local</id>
            <url>http://build.cl.gemini.edu:8081/artifactory/libs-releases-local</url>
        </repository>
        <repository>
            <!-- Scala-tools.org mirror -->
            <id>edu.gemini.scala-org.mirror</id>
            <url>http://build.cl.gemini.edu:8081/artifactory/scala-tools.org</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <!-- Maven central mirror -->
            <id>edu.gemini.plugins-releases-local</id>
            <url>http://build.cl.gemini.edu:8081/artifactory/plugins-releases</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>


</project>
